--- a/workguru-ui/src/app/jobs/jobs-list/jobs-list.component.html
+++ b/workguru-ui/src/app/jobs/jobs-list/jobs-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="p-col-12">
-    <h1>Atividades Físicas</h1>
+    <h1>Vagas</h1>
   </div>
 
   <div class="p-grid">
@@ -20,51 +20,53 @@
             <th class="col-actions-header"></th>
           </tr>
         </ng-template>
-        <ng-template pTemplate="body" let-activity>
+        <ng-template pTemplate="body" let-job>
           <tr>
             <td>
               <span class="p-column-title">Título</span>
               {{ job.title }}
             </td>
             <td>
-              <span class="p-column-title">Tipo</span>
-              <span *ngIf="activity.type === 'CORRIDA'">
-                <img src="assets/running_icon.png" alt="Corrida">
-              </span>
-              <span *ngIf="activity.type === 'CAMINHADA'">
-                <img src="assets/walking_icon.png" alt="Corrida">
-              </span>
-              <span *ngIf="activity.type === 'CICLISMO'">
-                <img src="assets/cycling_icon.png" alt="Corrida">
-              </span>
-              <span *ngIf="activity.type === 'NATACAO'">
-                <img src="assets/swimming_icon.png" alt="Corrida">
-              </span>
+              <span class="p-column-title">Tecnologia</span>
+              {{ job.tecnology }}
             </td>
             <td>
-              <span class="p-column-title">Data</span>
-              {{ activity.date }}
+              <span class="p-column-title">Área</span>
+              {{ job.jobArea }}
             </td>
             <td>
-              <span class="p-column-title">Distância</span>
-              {{ activity.distance | number: '1.1-1'}} km
+              <span class="p-column-title">Descrição</span>
+              {{ job.description }}
             </td>
             <td>
-              <span class="p-column-title">Duração</span>
-              {{ activity.duration }} min
+              <span class="p-column-title">Nível</span>
+              {{ job.level }}
+            </td>
+            <td>
+              <span class="p-column-title">Modelo</span>
+              {{ job.model }}
+            </td>
+            <td>
+              <span class="p-column-title">Salário</span>
+              {{ job.salary }}
+            </td>
+            <td>
+              <span class="p-column-title">Status</span>
+              {{ job.status }}
             </td>
             <td class="col-actions">
               <a pButton icon="pi pi-pencil" pTooltip="Editar" tooltipPosition="top"
-                [routerLink]="['/activities', activity.id]"></a>
+                [routerLink]="['/jobs', job.id]"></a>
                 <button pButton icon="pi pi-trash" pTooltip="Excluir" tooltipPosition="top"
-                (click)="confirmRemoval(activity)"></buttona>
+                  (click)="confirmRemoval(job)"
+                  [disabled]="!auth.hasPermission('ROLE_REMOVE_JOB')"></button>
             </td>
           </tr>
         </ng-template>
       </p-table>
     </div>
     <div class="p-col-12">
-      <p><a pButton label="Nova Atividade" routerLink="/activities/new"></a></p>
+      <p><a pButton label="Nova Vaga" routerLink="/jobs/new"></a></p>
     </div>
   </div>
 </div>
