tentando consertar problema na parte de autorização

--- a/workguru-ui/src/app/jobs/job-register/job-register.component.html
+++ b/workguru-ui/src/app/jobs/job-register/job-register.component.html
@@ -66,7 +66,7 @@
           <button pButton type="submit" label="Salvar" [disabled]="f.invalid"></button>
           <button pButton type="button" label="Nova" class="p-button-info"
             (click)="new(f)"></button>
-          <a routerLink="/activities">Voltar para a pesquisa</a>
+          <a routerLink="/jobs">Voltar para a pesquisa</a>
         </p>
       </div>
     </div>
