--- a/workguru-ui/src/app/core/navbar/navbar.component.css
+++ b/workguru-ui/src/app/core/navbar/navbar.component.css
@@ -1,10 +1,15 @@
 .navbar {
   padding: 20px 0 10px;
-  background-color: #1e94d2;
+  background-color: #28a745;
 }
 
 .navbar-toggle {
   color: #fff;
+  background-color: #28a745;
+}
+
+a{
+  background-color: #3a3633;
 }
 
 .navbar-menu {
