--- a/workguru-ui/src/app/jobs/jobs-list/jobs-list.component.css
+++ b/workguru-ui/src/app/jobs/jobs-list/jobs-list.component.css
@@ -1,3 +1,10 @@
 a {
   text-decoration: none;
 }
+
+h1 {
+  text-align: center;
+  margin-bottom: 25x;
+  margin-top: 5px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
