--- a/workguru-ui/src/app/home/home/home.component.html
+++ b/workguru-ui/src/app/home/home/home.component.html
@@ -1,18 +1,13 @@
 <div>
   <header>
       <nav>
-        <img src="assets/ifitness_logo.jpg" alt="Logo do IFitness">
-        <div>
-          <button severity="info" (click)="login()">Login</button>
-          <a pButton routerLink="/jobs/new">Cadastre-se</a>
-        </div>
+        
       </nav>
   </header>
 
   <main>
-      <h1>Comece a se movimentar!</h1>
-      <p>Registre suas atividades, acompanhe seu progresso e inspire-se.</p>
-      <img src="assets/ifitness_logo.jpg" alt="Logo do IFitness" class="img-main">
+      <h1>Bem vindos ao WorkGuru!</h1>
+      <p>Seu mais novo site de divulgação de vagas voltadas para a área de TI.</p>
   </main>
 
   <footer>
