segura essa estilização

--- a/workguru-ui/src/app/home/home/home.component.html
+++ b/workguru-ui/src/app/home/home/home.component.html
@@ -1,13 +1,8 @@
 <div>
-  <header>
-      <nav>
-        
-      </nav>
-  </header>
 
   <main>
       <h1>Bem vindos ao WorkGuru!</h1>
-      <p>Seu mais novo site de divulgação de vagas voltadas para a área de TI.</p>
+      <p>Aqui você encontra a sua vaga perfeita na área de tecnologia</p>
   </main>
 
   <footer>
