--- a/workguru-ui/src/app/core/navbar/navbar.component.css
+++ b/workguru-ui/src/app/core/navbar/navbar.component.css
@@ -1,19 +1,20 @@
 .navbar {
-  padding: 25px 0 ;
   background: linear-gradient(217deg, #17021c, #310935, #4b104d, #641766 70%),
               linear-gradient(127deg, #7e1e7e, #982697, #b22daf 70%),
               linear-gradient(336deg, #cb34c8, #e53be0, #ff42f9 70%);
 
+  display: flex;
+  justify-content: space-between;
 }
-
+h1{
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 40px;
+}
 a{
   background-color: #3a3633;
 }
 
-button{
-  display: flex;
-  justify-self: flex-start;
-}
 
 .navbar-menu {
   position: fixed;
