--- a/workguru-ui/src/app/home/home/home.component.html
+++ b/workguru-ui/src/app/home/home/home.component.html
@@ -6,6 +6,6 @@
   </main>
 
   <footer>
-      <p>&copy; 2024 WorkGuru. Todos os direitos reservados.</p>
+      <p id="footer">&copy; 2024 WorkGuru. Todos os direitos reservados.</p>
   </footer>
 </div>
