--- a/workguru-ui/src/app/core/navbar/navbar.component.css
+++ b/workguru-ui/src/app/core/navbar/navbar.component.css
@@ -5,15 +5,25 @@
 
   display: flex;
   justify-content: space-between;
+  align-items: center;
+
 }
-h1{
+#workguru{
   color: white;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 40px;
+  padding: 16px;
+  text-decoration: none;
 }
-a{
-  background-color: #3a3633;
+
+#buttons{
+  display: flex;
+  justify-items: right;
+  justify-content: space-between;
+  margin-right: 20px;
 }
+
+
 
 
 .navbar-menu {
@@ -66,5 +76,46 @@ a{
 .navbar-menuitem.active {
    background-color: #494541;
 }
+
+.dropbtn {
+  background-color: #4364D1;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {background-color: grey}
 
 
