--- a/workguru-ui/src/app/core/navbar/navbar.component.html
+++ b/workguru-ui/src/app/core/navbar/navbar.component.html
@@ -1,18 +1,30 @@
 <nav class="navbar">
 
-  <h1>WorkGuru</h1>
-  <div>
-    <button severity="info" (click)="login()">Login</button>
+  <a id ="workguru" href="/home">WorkGuru</a>
+  <div id="buttons">
+    <div>
+      <button severity="info" (click)="login()">Login</button>
+    </div>
+
+
+
+    <ul class="navbar-menu" [hidden]="!displayingMenu">
+      <li class="navbar-user">{{ auth.jwtPayload?.name }}</li>
+      <li class="navbar-menuitem" routerLinkActive="active"
+        *ngIf="auth.hasPermission('ROLE_SEARCH_JOB')">
+        <a routerLink="/jobs">Vagas</a>
+      </li>
+      <li class="navbar-menuitem"><a href="#">Estatísticas</a></li>
+      <li class="navbar-menuitem"><a href="javascript:;" (click)="logout()">Logout</a></li>
+    </ul>
+    <div class="dropdown">
+      <button class="dropbtn">Registrar</button>
+      <div class="dropdown-content">
+        <a href="#">Sou candidato</a>
+        <a href="/enterprises/new">Sou empresa</a>
+      </div>
+    </div>
   </div>
 
-  <ul class="navbar-menu" [hidden]="!displayingMenu">
-    <li class="navbar-user">{{ auth.jwtPayload?.name }}</li>
-    <li class="navbar-menuitem" routerLinkActive="active"
-      *ngIf="auth.hasPermission('ROLE_SEARCH_JOB')">
-      <a routerLink="/jobs">Vagas</a>
-    </li>
-    <li class="navbar-menuitem"><a href="#">Estatísticas</a></li>
-    <li class="navbar-menuitem"><a href="javascript:;" (click)="logout()">Logout</a></li>
-  </ul>
 
 </nav>
