--- a/workguru-ui/src/styles.css
+++ b/workguru-ui/src/styles.css
@@ -1,16 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
 body {background: linear-gradient(180deg, #551466,#000000);
-              width: 100vw;
-              height: 100vh;
+              width: 100%;
+              height: 100%;
+    margin: unset;
+
 }
 
-button,a {
-  background-color: blue;
+button, .dropbtn{
+  background-color: #4364D1;
   color: #fff;
   border-radius: 5px;
   border: none;
   font-size: medium;
-  padding: 10px 20px;
+  padding: 16px;
   margin: 0 10px;
+  width: 90px;
 }
 
