--- a/workguru-ui/src/styles.css
+++ b/workguru-ui/src/styles.css
@@ -1,18 +1,18 @@
-body {background: linear-gradient(180deg, #551466,#000000);
+body {background-color: #CCCCCC;
               width: 100%;
               height: 100%;
     margin: unset;
 
 }
 
-button, .dropbtn{
-  background-color: #4364D1;
-  color: #fff;
-  border-radius: 5px;
-  border: none;
-  font-size: medium;
-  padding: 16px;
-  margin: 0 10px;
-  width: 90px;
+
+body.pagina-home {
+  background: linear-gradient(180deg, #551466,#000000);
 }
+
+.button-container {
+  text-align: center;
+  margin-top: 20px;
+}
+
 
