Estilizando a página de vagas

--- a/workguru-ui/src/app/app.component.html
+++ b/workguru-ui/src/app/app.component.html
@@ -1,5 +1,6 @@
-<app-navbar></app-navbar>
-<app-nav-home *ngIf="showingNavbar()"></app-nav-home>
+<app-navbar *ngIf="showingNavbar()"></app-navbar>
+<app-nav-home *ngIf="showingNavhome()"></app-nav-home>
+
 
 
 
