--- a/workguru-ui/src/app/core/nav-home/nav-home.component.html
+++ b/workguru-ui/src/app/core/nav-home/nav-home.component.html
@@ -2,7 +2,7 @@
 
   <a id ="workguru" href="/home">WorkGuru</a>
 
-  <div class="buttons">
+  <div id="buttons">
     <button severity="info" (click)="login()">Login</button>
     <div class="dropdown">
       <button class="dropbtn">Registrar</button>
