--- a/workguru-ui/src/app/jobs/jobs-list/jobs-list.component.css
+++ b/workguru-ui/src/app/jobs/jobs-list/jobs-list.component.css
@@ -8,3 +8,69 @@ h1 {
   margin-top: 5px;
   font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+.custom-table {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  margin-left: 15%;
+  margin-right: 15%;
+
+}
+
+.custom-table tr{
+  max-height: 190px;
+  background-color: #e8e9e2;
+}
+
+#title{
+  font-size: 25px;
+  color: black;
+  margin-left: 1%;
+  text-align: start;
+}
+
+.custom-table a{
+  width: 150px;
+  border-radius: 20px;
+  background: linear-gradient(90deg, #9f28bd,#61085c);
+  font-size: 20x;
+  text-align: center;
+  margin-left: 400%;
+}
+
+#level, #img{
+  display: flex;
+  flex-direction: row;
+}
+
+#tags{
+  display: flex;
+  flex-direction: row;
+  margin-left: 60%;
+  gap:10px
+
+}
+
+#tec{
+  border: solid 1px #cdcec9;
+  border-radius: 6px;
+  padding: 1px;
+  background-color: #cdcec9;
+}
+
+img{
+  width: 110px;
+  height: 125px;
+  padding: 4px;
+}
+
+tr div{
+  height: 60px;
+}
+
+#level img{
+  width: 30px;
+  height: 30px;
+}
+
