--- a/workguru-ui/src/styles.css
+++ b/workguru-ui/src/styles.css
@@ -13,6 +13,11 @@ body.pagina-home {
 .button-container {
   text-align: center;
   margin-top: 20px;
+  width: 200px;
+  border-radius: 10px;
+  background: linear-gradient(90deg, #551466,#000000);
+  font-size: 20px;
 }
+
 
 
