--- a/workguru-ui/src/app/jobs/jobs-list/jobs-list.component.css
+++ b/workguru-ui/src/app/jobs/jobs-list/jobs-list.component.css
@@ -13,8 +13,8 @@ h1 {
   border: 1px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
-  margin-left: 15%;
-  margin-right: 15%;
+  margin-left: 13%;
+  margin-right: 13%;
 
 }
 
@@ -35,13 +35,16 @@ h1 {
   border-radius: 20px;
   background: linear-gradient(90deg, #9f28bd,#61085c);
   font-size: 20x;
-  text-align: center;
-  margin-left: 400%;
+  margin-left: 64%;
+  
 }
+
+
 
 #level, #img{
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 #tags{
