--- a/workguru-ui/src/app/core/navbar/navbar.component.css
+++ b/workguru-ui/src/app/core/navbar/navbar.component.css
@@ -8,11 +8,29 @@
   align-items: center;
 
 }
+
+.logo img{
+  width: 100px;
+  height: 100px;
+}
+
+.logo{
+  display: flex;
+  align-items: center;
+}
+
 #workguru{
   color: white;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 40px;
-  padding: 16px;
+  text-decoration: none;
+}
+
+#user{
+  color: white;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  padding: 10px;
   text-decoration: none;
 }
 
@@ -68,6 +86,42 @@
    background-color: #494541;
 }
 
+.dropdown-label{
+  display: flex;
+  margin-right: 30px;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  margin-top: 60px;
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
 
 
 
